syntax = "proto3";

option java_multiple_files = true;
option java_package = "fr.polytech.polystore.catalog";
option java_outer_classname = "CatalogServiceProto";

package catalog_service;

service CatalogService {
  rpc GetProducts (GetProductsRequestGRPC) returns (GetProductsResponseGRPC);
  rpc GetProduct (GetProductRequestGRPC) returns (ProductGRPC);
  rpc AddProduct (CreateProductGRPC) returns (ProductGRPC);
}

message GetProductsRequestGRPC {}

message GetProductsResponseGRPC {
  repeated ProductGRPC products = 1;
}

message GetProductRequestGRPC {
  string id = 1;
}

message CreateProductGRPC {
  string name = 1;
}

message ProductGRPC {
  string id = 1;
  string name = 2;
}
